# yew-rust-login

./: .env  .gitignore  README.md  diesel.toml
backend/: .env  Cargo.toml  database.db
backend/migrations/2025-01-22-175206_create_users/: up.sql
backend/src/: main.rs  models.rs  schema.rs
backend/src/handlers/: auth_dtos.rs  auth_handlers.rs  auth_models.rs  profile_handlers.rs
backend/src/models/: user_models.rs
backend/src/repositories/: user_repository.rs
frontend/: Cargo.toml  index.html
frontend/src/: auth_components.rs  main.rs  pages.rs
migrations/2024-01-22-create_users/: up.sql
migrations/2025-01-22-153440_add_email_to_users/: up.sql
migrations/2025-01-22-175206_create_users/: up.sql
src/: schema.rs
