[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
diesel_migrations = "2.1.0"
dotenvy = "0.15"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bcrypt = "0.10"
jsonwebtoken = "8.1"
