[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20", features = ["csr"] }
tracing = "0.1"
tracing-wasm = "0.2"
console_error_panic_hook = "0.1"
yew-router = "0.17"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["HtmlInputElement"] }
gloo-net = "0.2"
gloo-timers = { version = "0.2", features = ["futures"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen-futures = "0.4"
